kubernetes/jaeger/jaeger.yaml
#
# Copyright 2017 The Jaeger Authors
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
#

apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    name: cassandra
    labels:
      app: jaeger
      name: jaeger-cassandra-service
      jaeger-infra: cassandra-service
  spec:
    ports:
    - port: 7000
      name: intra-node
    - port: 7001
      name: tls-intra-node
    - port: 7199
      name: jmx
    - port: 9042
      name: cql
    - port: 9160
      name: thrift
    clusterIP: None
    selector:
      app: cassandra
- apiVersion: "apps/v1beta1"
  kind: StatefulSet
  metadata:
    name: cassandra
    labels:
      app: jaeger
      jaeger-infra: cassandra-statefulset
  spec:
    serviceName: cassandra
    replicas: 3
    template:
      metadata:
        labels:
          app: cassandra
          jaeger-infra: cassandra-replica
      spec:
        terminationGracePeriodSeconds: 1800
        containers:
        - name: cassandra
          image: cassandra:3.11
          command:
          - /docker-entrypoint.sh
          - "-R"
          ports:
          - containerPort: 7000
            name: intra-node
          - containerPort: 7001
            name: tls-intra-node
          - containerPort: 7199
            name: jmx
          - containerPort: 9042
            name: cql
          - containerPort: 9160
            name: thrift
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "nodetool drain"]
          volumeMounts:
          - name: cassandra-data
            mountPath: /var/lib/cassandra
          - name: cassandra-logs
            mountPath: /var/log/cassandra
        volumes:
        - name: cassandra-data
          emptyDir: {}
        - name: cassandra-logs
          emptyDir: {}
- apiVersion: batch/v1
  kind: Job
  metadata:
    name: jaeger-cassandra-schema-job
    labels:
      app: jaeger
      jaeger-infra: cassandra-schema-job
  spec:
    activeDeadlineSeconds: 120
    template:
      metadata:
        name: cassandra-schema
      spec:
        containers:
        - name: jaeger-cassandra-schema
          image: jaegertracing/jaeger-cassandra-schema:0.5
        restartPolicy: Never
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: jaeger-collector
    labels:
      app: jaeger
      jaeger-infra: collector-deployment
  spec:
    replicas: 1
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: jaeger
          jaeger-infra: collector-pod
      spec:
        containers:
        - image: jaegertracing/jaeger-collector:0.5
          name: jaeger-collector
          ports:
          - containerPort: 14267
            protocol: TCP
          - containerPort: 14268
            protocol: TCP
          command:
          - "/go/bin/collector-linux"
          - "--cassandra.servers=cassandra"
          - "--cassandra.keyspace=jaeger_v1_dc1"
        dnsPolicy: ClusterFirst
        restartPolicy: Always
- apiVersion: v1
  kind: Service
  metadata:
    name: jaeger-collector
    labels:
      app: jaeger
      jaeger-infra: collector-service
  spec:
    ports:
    - name: jaeger-collector-tchannel
      port: 14267
      protocol: TCP
      targetPort: 14267
    - name: jaeger-collector-http
      port: 14268
      protocol: TCP
      targetPort: 14268
    selector:
      jaeger-infra: collector-pod
    type: ClusterIP
- apiVersion: extensions/v1beta1
  kind: Deployment
  metadata:
    name: jaeger-query
    labels:
      app: jaeger
      jaeger-infra: query-deployment
  spec:
    replicas: 1
    strategy:
      type: Recreate
    template:
      metadata:
        labels:
          app: jaeger
          jaeger-infra: query-pod
      spec:
        containers:
        - image: jaegertracing/jaeger-query:0.5
          name: jaeger-query
          ports:
          - containerPort: 16686
            protocol: TCP
          command:
          - "/go/bin/query-linux"
          - "--cassandra.servers=cassandra"
          - "--cassandra.keyspace=jaeger_v1_dc1"
          - "--query.static-files=/go/jaeger-ui/"
          readinessProbe:
            httpGet:
              path: "/"
              port: 16686
        dnsPolicy: ClusterFirst
        restartPolicy: Always
- apiVersion: v1
  kind: Service
  metadata:
    name: jaeger-query
    labels:
      app: jaeger
      jaeger-infra: query-service
  spec:
    ports:
    - name: jaeger-query
      port: 80
      protocol: TCP
      targetPort: 16686
    selector:
      jaeger-infra: query-pod
    type: ClusterIP
