kubernetes/jaeger/jaeger-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: yaeger
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
    - host: trace.gophercon.com
      http:
        paths:
          - backend:
              serviceName: jaeger-query
              servicePort: 80
